--- a/screwdriver.yaml
+++ b/screwdriver.yaml
@@ -6,4 +6,5 @@ jobs:
     steps:
       - noop: |
           sd-cmd exec screwdriver/install-nodejs@latest 12
+          . "$HOME/.nvm/nvm.sh" 
           node --version
